# server/src/models/User.go
@@ -1,0 +1,19 @@
+package models
+
+import (
+	"database/sql"
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type User struct {
+	ID        uuid.UUID    `json:"id" db:"id"`
+	FirstName string       `json:"first_name" db:"first_name"`
+	LastName  string       `json:"last_name" db:"last_name"`
+	Email     string       `json:"email" db:"email"`
+	Password  string       `json:"-" db:"password"`
+	CreatedAt time.Time    `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time    `json:"updated_at" db:"updated_at"`
+	DeletedAt sql.NullTime `json:"deleted_at" db:"deleted_at"`
+}
